// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CrewManagerContactDetails snapshot test should render CrewManagerContactDetails correctly as per the ui made and  photoSmall is defined 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RCTScrollView
    style={
      Object {
        "flexGrow": 1,
      }
    }
  >
    <View>
      <View>
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              Object {
                "marginLeft": 60,
                "marginTop": 30,
                "width": "15%",
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "justifyContent": "center",
                }
              }
            >
              <View
                style={
                  Object {
                    "borderColor": "black",
                    "borderRadius": 50,
                    "borderWidth": 1.5,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "backgroundColor": "transparent",
                      "borderRadius": 37.5,
                      "height": 75,
                      "width": 75,
                    }
                  }
                  theme={
                    Object {
                      "colors": Object {
                        "black": "#242424",
                        "disabled": "hsl(208, 8%, 90%)",
                        "divider": "#bcbbc1",
                        "error": "#ff190c",
                        "grey0": "#393e42",
                        "grey1": "#43484d",
                        "grey2": "#5e6977",
                        "grey3": "#86939e",
                        "grey4": "#bdc6cf",
                        "grey5": "#e1e8ee",
                        "greyOutline": "#bbb",
                        "platform": Object {
                          "android": Object {
                            "error": "#f44336",
                            "grey": "rgba(0, 0, 0, 0.54)",
                            "primary": "#2196f3",
                            "secondary": "#9C27B0",
                            "success": "#4caf50",
                            "warning": "#ffeb3b",
                          },
                          "ios": Object {
                            "error": "#ff3b30",
                            "grey": "#7d7d7d",
                            "primary": "#007aff",
                            "searchBg": "#dcdce1",
                            "secondary": "#5856d6",
                            "success": "#4cd964",
                            "warning": "#ffcc00",
                          },
                        },
                        "primary": "#2089dc",
                        "searchBg": "#303337",
                        "secondary": "#ca71eb",
                        "success": "#52c41a",
                        "warning": "#faad14",
                        "white": "#ffffff",
                      },
                    }
                  }
                >
                  <View
                    accessibilityIgnoresInvertColors={true}
                    style={
                      Object {
                        "backgroundColor": "transparent",
                        "borderRadius": 37.5,
                        "flex": 1,
                        "overflow": "hidden",
                        "position": "relative",
                      }
                    }
                  >
                    <Image
                      borderRadius={37.5}
                      onLoad={[Function]}
                      source={
                        Object {
                          "uri": "data:image/png;base64,1234",
                        }
                      }
                      style={
                        Object {
                          "borderColor": "white",
                          "borderRadius": 50,
                          "borderWidth": 2.5,
                          "bottom": 0,
                          "flex": 1,
                          "height": null,
                          "left": 0,
                          "position": "absolute",
                          "right": 0,
                          "top": 0,
                          "width": null,
                        }
                      }
                      testID="RNE__Image"
                      theme={
                        Object {
                          "colors": Object {
                            "black": "#242424",
                            "disabled": "hsl(208, 8%, 90%)",
                            "divider": "#bcbbc1",
                            "error": "#ff190c",
                            "grey0": "#393e42",
                            "grey1": "#43484d",
                            "grey2": "#5e6977",
                            "grey3": "#86939e",
                            "grey4": "#bdc6cf",
                            "grey5": "#e1e8ee",
                            "greyOutline": "#bbb",
                            "platform": Object {
                              "android": Object {
                                "error": "#f44336",
                                "grey": "rgba(0, 0, 0, 0.54)",
                                "primary": "#2196f3",
                                "secondary": "#9C27B0",
                                "success": "#4caf50",
                                "warning": "#ffeb3b",
                              },
                              "ios": Object {
                                "error": "#ff3b30",
                                "grey": "#7d7d7d",
                                "primary": "#007aff",
                                "searchBg": "#dcdce1",
                                "secondary": "#5856d6",
                                "success": "#4cd964",
                                "warning": "#ffcc00",
                              },
                            },
                            "primary": "#2089dc",
                            "searchBg": "#303337",
                            "secondary": "#ca71eb",
                            "success": "#52c41a",
                            "warning": "#faad14",
                            "white": "#ffffff",
                          },
                        }
                      }
                      transition={true}
                    />
                    <View
                      accessibilityElementsHidden={true}
                      importantForAccessibility="no-hide-descendants"
                      pointerEvents="none"
                      style={
                        Object {
                          "bottom": 0,
                          "left": 0,
                          "opacity": 1,
                          "position": "absolute",
                          "right": 0,
                          "top": 0,
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "alignItems": "center",
                            "backgroundColor": "#bdbdbd",
                            "borderColor": "white",
                            "borderRadius": 50,
                            "borderWidth": 2.5,
                            "flex": 1,
                            "height": null,
                            "justifyContent": "center",
                            "width": null,
                          }
                        }
                        testID="RNE__Image__placeholder"
                      >
                        <Text
                          style={
                            Object {
                              "backgroundColor": "transparent",
                              "color": "#ffffff",
                              "fontSize": 37.5,
                              "textAlign": "center",
                            }
                          }
                        >
                          GI
                        </Text>
                      </View>
                    </View>
                    <View
                      style={
                        Object {
                          "borderColor": "white",
                          "borderRadius": 50,
                          "borderWidth": 2.5,
                          "flex": 1,
                          "height": null,
                          "width": null,
                        }
                      }
                    />
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View
            style={
              Object {
                "width": "85%",
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#2A2E43",
                    "fontFamily": "Roboto-Regular",
                  },
                  Object {
                    "color": "rgb(28, 28, 30)",
                    "fontSize": 22.5,
                    "marginHorizontal": 60,
                    "marginTop": 60,
                  },
                ]
              }
            >
              Crew manager
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "#2A2E43",
                    "fontFamily": "Roboto-Regular",
                  },
                  Object {
                    "color": "rgb(28, 28, 30)",
                    "fontSize": 26.5,
                    "fontWeight": "bold",
                    "marginHorizontal": 60,
                    "marginTop": 2.5,
                  },
                ]
              }
            >
              Mr. Alexey Menshikov
            </Text>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "borderBottomColor": "#78849E",
              "borderBottomWidth": 0.3,
              "marginTop": 30,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              Object {
                "width": "50%",
              }
            }
          >
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
              testID="directTelephoneNumber-button"
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2A2E43",
                      "fontFamily": "Roboto-Regular",
                    },
                    Object {
                      "color": "rgb(28, 28, 30)",
                      "fontSize": 22.5,
                      "marginHorizontal": 60,
                      "marginTop": 60,
                    },
                  ]
                }
              >
                Direct phone numbers
              </Text>
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2A2E43",
                      "fontFamily": "Roboto-Regular",
                    },
                    Object {
                      "color": "rgb(28, 28, 30)",
                      "fontSize": 26.5,
                      "fontWeight": "bold",
                      "marginHorizontal": 60,
                      "marginTop": 2.5,
                      "textDecorationLine": "underline",
                    },
                  ]
                }
              >
                +35725882242
              </Text>
            </View>
          </View>
          <View
            style={
              Object {
                "width": "50%",
              }
            }
          >
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
              testID="aohTelephoneNumber-button"
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2A2E43",
                      "fontFamily": "Roboto-Regular",
                    },
                    Object {
                      "color": "rgb(28, 28, 30)",
                      "fontSize": 22.5,
                      "marginHorizontal": 60,
                      "marginTop": 60,
                    },
                  ]
                }
              >
                AOH phone numbers
              </Text>
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2A2E43",
                      "fontFamily": "Roboto-Regular",
                    },
                    Object {
                      "color": "rgb(28, 28, 30)",
                      "fontSize": 26.5,
                      "fontWeight": "bold",
                      "marginHorizontal": 60,
                      "marginTop": 2.5,
                      "textDecorationLine": "underline",
                    },
                  ]
                }
              >
                +35799378108
              </Text>
            </View>
          </View>
          <View
            style={
              Object {
                "borderBottomColor": "#78849E",
                "borderBottomWidth": 0.3,
                "marginTop": 60,
              }
            }
          />
        </View>
      </View>
      <View>
        <View>
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
            testID="email-button"
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#2A2E43",
                    "fontFamily": "Roboto-Regular",
                  },
                  Object {
                    "color": "rgb(28, 28, 30)",
                    "fontSize": 22.5,
                    "marginHorizontal": 60,
                    "marginTop": 60,
                  },
                ]
              }
            >
              Email
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "#2A2E43",
                    "fontFamily": "Roboto-Regular",
                  },
                  Object {
                    "color": "rgb(28, 28, 30)",
                    "fontSize": 26.5,
                    "fontWeight": "bold",
                    "marginHorizontal": 60,
                    "marginTop": 2.5,
                    "textDecorationLine": "underline",
                  },
                ]
              }
            >
              d9@marlow.com.cy
            </Text>
          </View>
        </View>
      </View>
      <View>
        <View>
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
            testID="skype-button"
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#2A2E43",
                    "fontFamily": "Roboto-Regular",
                  },
                  Object {
                    "color": "rgb(28, 28, 30)",
                    "fontSize": 22.5,
                    "marginHorizontal": 60,
                    "marginTop": 60,
                  },
                ]
              }
            >
              Skype
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "#2A2E43",
                    "fontFamily": "Roboto-Regular",
                  },
                  Object {
                    "color": "rgb(28, 28, 30)",
                    "fontSize": 26.5,
                    "fontWeight": "bold",
                    "marginHorizontal": 60,
                    "marginTop": 2.5,
                    "textDecorationLine": "underline",
                  },
                ]
              }
            >
              
            </Text>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "borderBottomColor": "#78849E",
              "borderBottomWidth": 0.3,
              "marginTop": 60,
            }
          }
        />
      </View>
      <View>
        <View>
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
            testID="website-button"
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#2A2E43",
                    "fontFamily": "Roboto-Regular",
                  },
                  Object {
                    "color": "rgb(28, 28, 30)",
                    "fontSize": 22.5,
                    "marginHorizontal": 60,
                    "marginTop": 60,
                  },
                ]
              }
            >
              Web
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "#2A2E43",
                    "fontFamily": "Roboto-Regular",
                  },
                  Object {
                    "color": "rgb(28, 28, 30)",
                    "fontSize": 26.5,
                    "fontWeight": "bold",
                    "marginHorizontal": 60,
                    "marginTop": 2.5,
                    "textDecorationLine": "underline",
                  },
                ]
              }
            >
              http://marlow-navigation.com
            </Text>
          </View>
        </View>
      </View>
      <View>
        <View>
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
            testID="address-button"
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#2A2E43",
                    "fontFamily": "Roboto-Regular",
                  },
                  Object {
                    "color": "rgb(28, 28, 30)",
                    "fontSize": 22.5,
                    "marginHorizontal": 60,
                    "marginTop": 60,
                  },
                ]
              }
            >
              Address
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "#2A2E43",
                    "fontFamily": "Roboto-Regular",
                  },
                  Object {
                    "color": "rgb(28, 28, 30)",
                    "fontSize": 26.5,
                    "fontWeight": "bold",
                    "marginHorizontal": 60,
                    "marginTop": 2.5,
                    "textDecorationLine": "underline",
                  },
                ]
              }
            >
              13 Alexandrias Street, 3013, Limassol
            </Text>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "marginBottom": "10%",
            }
          }
        />
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`CrewManagerContactDetails snapshot test should render CrewManagerContactDetails correctly as per the ui made and  photoSmall is undefined 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RCTScrollView
    style={
      Object {
        "flexGrow": 1,
      }
    }
  >
    <View>
      <View>
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              Object {
                "marginLeft": 60,
                "marginTop": 30,
                "width": "15%",
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "justifyContent": "center",
                }
              }
            >
              <View
                style={
                  Object {
                    "borderColor": "black",
                    "borderRadius": 50,
                    "borderWidth": 1.5,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "backgroundColor": "transparent",
                      "borderRadius": 37.5,
                      "height": 75,
                      "width": 75,
                    }
                  }
                  theme={
                    Object {
                      "colors": Object {
                        "black": "#242424",
                        "disabled": "hsl(208, 8%, 90%)",
                        "divider": "#bcbbc1",
                        "error": "#ff190c",
                        "grey0": "#393e42",
                        "grey1": "#43484d",
                        "grey2": "#5e6977",
                        "grey3": "#86939e",
                        "grey4": "#bdc6cf",
                        "grey5": "#e1e8ee",
                        "greyOutline": "#bbb",
                        "platform": Object {
                          "android": Object {
                            "error": "#f44336",
                            "grey": "rgba(0, 0, 0, 0.54)",
                            "primary": "#2196f3",
                            "secondary": "#9C27B0",
                            "success": "#4caf50",
                            "warning": "#ffeb3b",
                          },
                          "ios": Object {
                            "error": "#ff3b30",
                            "grey": "#7d7d7d",
                            "primary": "#007aff",
                            "searchBg": "#dcdce1",
                            "secondary": "#5856d6",
                            "success": "#4cd964",
                            "warning": "#ffcc00",
                          },
                        },
                        "primary": "#2089dc",
                        "searchBg": "#303337",
                        "secondary": "#ca71eb",
                        "success": "#52c41a",
                        "warning": "#faad14",
                        "white": "#ffffff",
                      },
                    }
                  }
                >
                  <View
                    accessibilityIgnoresInvertColors={true}
                    style={
                      Object {
                        "backgroundColor": "transparent",
                        "borderRadius": 37.5,
                        "flex": 1,
                        "overflow": "hidden",
                        "position": "relative",
                      }
                    }
                  >
                    <Image
                      borderRadius={37.5}
                      onLoad={[Function]}
                      style={
                        Object {
                          "borderColor": "white",
                          "borderRadius": 50,
                          "borderWidth": 2.5,
                          "bottom": 0,
                          "flex": 1,
                          "height": null,
                          "left": 0,
                          "position": "absolute",
                          "right": 0,
                          "top": 0,
                          "width": null,
                        }
                      }
                      testID="RNE__Image"
                      theme={
                        Object {
                          "colors": Object {
                            "black": "#242424",
                            "disabled": "hsl(208, 8%, 90%)",
                            "divider": "#bcbbc1",
                            "error": "#ff190c",
                            "grey0": "#393e42",
                            "grey1": "#43484d",
                            "grey2": "#5e6977",
                            "grey3": "#86939e",
                            "grey4": "#bdc6cf",
                            "grey5": "#e1e8ee",
                            "greyOutline": "#bbb",
                            "platform": Object {
                              "android": Object {
                                "error": "#f44336",
                                "grey": "rgba(0, 0, 0, 0.54)",
                                "primary": "#2196f3",
                                "secondary": "#9C27B0",
                                "success": "#4caf50",
                                "warning": "#ffeb3b",
                              },
                              "ios": Object {
                                "error": "#ff3b30",
                                "grey": "#7d7d7d",
                                "primary": "#007aff",
                                "searchBg": "#dcdce1",
                                "secondary": "#5856d6",
                                "success": "#4cd964",
                                "warning": "#ffcc00",
                              },
                            },
                            "primary": "#2089dc",
                            "searchBg": "#303337",
                            "secondary": "#ca71eb",
                            "success": "#52c41a",
                            "warning": "#faad14",
                            "white": "#ffffff",
                          },
                        }
                      }
                      transition={true}
                    />
                    <View
                      accessibilityElementsHidden={false}
                      importantForAccessibility="yes"
                      pointerEvents="auto"
                      style={
                        Object {
                          "bottom": 0,
                          "left": 0,
                          "opacity": 1,
                          "position": "absolute",
                          "right": 0,
                          "top": 0,
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "alignItems": "center",
                            "backgroundColor": "transparent",
                            "borderColor": "white",
                            "borderRadius": 50,
                            "borderWidth": 2.5,
                            "flex": 1,
                            "height": null,
                            "justifyContent": "center",
                            "width": null,
                          }
                        }
                        testID="RNE__Image__placeholder"
                      />
                    </View>
                    <View
                      style={
                        Object {
                          "borderColor": "white",
                          "borderRadius": 50,
                          "borderWidth": 2.5,
                          "flex": 1,
                          "height": null,
                          "width": null,
                        }
                      }
                    />
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View
            style={
              Object {
                "width": "85%",
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#2A2E43",
                    "fontFamily": "Roboto-Regular",
                  },
                  Object {
                    "color": "rgb(28, 28, 30)",
                    "fontSize": 22.5,
                    "marginHorizontal": 60,
                    "marginTop": 60,
                  },
                ]
              }
            >
              Crew manager
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "#2A2E43",
                    "fontFamily": "Roboto-Regular",
                  },
                  Object {
                    "color": "rgb(28, 28, 30)",
                    "fontSize": 26.5,
                    "fontWeight": "bold",
                    "marginHorizontal": 60,
                    "marginTop": 2.5,
                  },
                ]
              }
            >
              Mr. Alexey Menshikov
            </Text>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "borderBottomColor": "#78849E",
              "borderBottomWidth": 0.3,
              "marginTop": 30,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              Object {
                "width": "50%",
              }
            }
          >
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
              testID="directTelephoneNumber-button"
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2A2E43",
                      "fontFamily": "Roboto-Regular",
                    },
                    Object {
                      "color": "rgb(28, 28, 30)",
                      "fontSize": 22.5,
                      "marginHorizontal": 60,
                      "marginTop": 60,
                    },
                  ]
                }
              >
                Direct phone numbers
              </Text>
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2A2E43",
                      "fontFamily": "Roboto-Regular",
                    },
                    Object {
                      "color": "rgb(28, 28, 30)",
                      "fontSize": 26.5,
                      "fontWeight": "bold",
                      "marginHorizontal": 60,
                      "marginTop": 2.5,
                      "textDecorationLine": "underline",
                    },
                  ]
                }
              >
                +35725882242
              </Text>
            </View>
          </View>
          <View
            style={
              Object {
                "width": "50%",
              }
            }
          >
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
              testID="aohTelephoneNumber-button"
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2A2E43",
                      "fontFamily": "Roboto-Regular",
                    },
                    Object {
                      "color": "rgb(28, 28, 30)",
                      "fontSize": 22.5,
                      "marginHorizontal": 60,
                      "marginTop": 60,
                    },
                  ]
                }
              >
                AOH phone numbers
              </Text>
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2A2E43",
                      "fontFamily": "Roboto-Regular",
                    },
                    Object {
                      "color": "rgb(28, 28, 30)",
                      "fontSize": 26.5,
                      "fontWeight": "bold",
                      "marginHorizontal": 60,
                      "marginTop": 2.5,
                      "textDecorationLine": "underline",
                    },
                  ]
                }
              >
                +35799378108
              </Text>
            </View>
          </View>
          <View
            style={
              Object {
                "borderBottomColor": "#78849E",
                "borderBottomWidth": 0.3,
                "marginTop": 60,
              }
            }
          />
        </View>
      </View>
      <View>
        <View>
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
            testID="email-button"
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#2A2E43",
                    "fontFamily": "Roboto-Regular",
                  },
                  Object {
                    "color": "rgb(28, 28, 30)",
                    "fontSize": 22.5,
                    "marginHorizontal": 60,
                    "marginTop": 60,
                  },
                ]
              }
            >
              Email
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "#2A2E43",
                    "fontFamily": "Roboto-Regular",
                  },
                  Object {
                    "color": "rgb(28, 28, 30)",
                    "fontSize": 26.5,
                    "fontWeight": "bold",
                    "marginHorizontal": 60,
                    "marginTop": 2.5,
                    "textDecorationLine": "underline",
                  },
                ]
              }
            >
              d9@marlow.com.cy
            </Text>
          </View>
        </View>
      </View>
      <View>
        <View>
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
            testID="skype-button"
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#2A2E43",
                    "fontFamily": "Roboto-Regular",
                  },
                  Object {
                    "color": "rgb(28, 28, 30)",
                    "fontSize": 22.5,
                    "marginHorizontal": 60,
                    "marginTop": 60,
                  },
                ]
              }
            >
              Skype
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "#2A2E43",
                    "fontFamily": "Roboto-Regular",
                  },
                  Object {
                    "color": "rgb(28, 28, 30)",
                    "fontSize": 26.5,
                    "fontWeight": "bold",
                    "marginHorizontal": 60,
                    "marginTop": 2.5,
                    "textDecorationLine": "underline",
                  },
                ]
              }
            >
              
            </Text>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "borderBottomColor": "#78849E",
              "borderBottomWidth": 0.3,
              "marginTop": 60,
            }
          }
        />
      </View>
      <View>
        <View>
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
            testID="website-button"
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#2A2E43",
                    "fontFamily": "Roboto-Regular",
                  },
                  Object {
                    "color": "rgb(28, 28, 30)",
                    "fontSize": 22.5,
                    "marginHorizontal": 60,
                    "marginTop": 60,
                  },
                ]
              }
            >
              Web
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "#2A2E43",
                    "fontFamily": "Roboto-Regular",
                  },
                  Object {
                    "color": "rgb(28, 28, 30)",
                    "fontSize": 26.5,
                    "fontWeight": "bold",
                    "marginHorizontal": 60,
                    "marginTop": 2.5,
                    "textDecorationLine": "underline",
                  },
                ]
              }
            >
              http://marlow-navigation.com
            </Text>
          </View>
        </View>
      </View>
      <View>
        <View>
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
            testID="address-button"
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#2A2E43",
                    "fontFamily": "Roboto-Regular",
                  },
                  Object {
                    "color": "rgb(28, 28, 30)",
                    "fontSize": 22.5,
                    "marginHorizontal": 60,
                    "marginTop": 60,
                  },
                ]
              }
            >
              Address
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "#2A2E43",
                    "fontFamily": "Roboto-Regular",
                  },
                  Object {
                    "color": "rgb(28, 28, 30)",
                    "fontSize": 26.5,
                    "fontWeight": "bold",
                    "marginHorizontal": 60,
                    "marginTop": 2.5,
                    "textDecorationLine": "underline",
                  },
                ]
              }
            >
              13 Alexandrias Street, 3013, Limassol
            </Text>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "marginBottom": "10%",
            }
          }
        />
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`CrewManagerContactDetails snapshot test should render CrewManagerContactDetails correctly as per the ui made and the crewManager timezone is defined 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RCTScrollView
    style={
      Object {
        "flexGrow": 1,
      }
    }
  >
    <View>
      <View>
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              Object {
                "marginLeft": 60,
                "marginTop": 30,
                "width": "15%",
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "justifyContent": "center",
                }
              }
            >
              <View
                style={
                  Object {
                    "borderColor": "black",
                    "borderRadius": 50,
                    "borderWidth": 1.5,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "backgroundColor": "transparent",
                      "borderRadius": 37.5,
                      "height": 75,
                      "width": 75,
                    }
                  }
                  theme={
                    Object {
                      "colors": Object {
                        "black": "#242424",
                        "disabled": "hsl(208, 8%, 90%)",
                        "divider": "#bcbbc1",
                        "error": "#ff190c",
                        "grey0": "#393e42",
                        "grey1": "#43484d",
                        "grey2": "#5e6977",
                        "grey3": "#86939e",
                        "grey4": "#bdc6cf",
                        "grey5": "#e1e8ee",
                        "greyOutline": "#bbb",
                        "platform": Object {
                          "android": Object {
                            "error": "#f44336",
                            "grey": "rgba(0, 0, 0, 0.54)",
                            "primary": "#2196f3",
                            "secondary": "#9C27B0",
                            "success": "#4caf50",
                            "warning": "#ffeb3b",
                          },
                          "ios": Object {
                            "error": "#ff3b30",
                            "grey": "#7d7d7d",
                            "primary": "#007aff",
                            "searchBg": "#dcdce1",
                            "secondary": "#5856d6",
                            "success": "#4cd964",
                            "warning": "#ffcc00",
                          },
                        },
                        "primary": "#2089dc",
                        "searchBg": "#303337",
                        "secondary": "#ca71eb",
                        "success": "#52c41a",
                        "warning": "#faad14",
                        "white": "#ffffff",
                      },
                    }
                  }
                >
                  <View
                    accessibilityIgnoresInvertColors={true}
                    style={
                      Object {
                        "backgroundColor": "transparent",
                        "borderRadius": 37.5,
                        "flex": 1,
                        "overflow": "hidden",
                        "position": "relative",
                      }
                    }
                  >
                    <Image
                      borderRadius={37.5}
                      onLoad={[Function]}
                      style={
                        Object {
                          "borderColor": "white",
                          "borderRadius": 50,
                          "borderWidth": 2.5,
                          "bottom": 0,
                          "flex": 1,
                          "height": null,
                          "left": 0,
                          "position": "absolute",
                          "right": 0,
                          "top": 0,
                          "width": null,
                        }
                      }
                      testID="RNE__Image"
                      theme={
                        Object {
                          "colors": Object {
                            "black": "#242424",
                            "disabled": "hsl(208, 8%, 90%)",
                            "divider": "#bcbbc1",
                            "error": "#ff190c",
                            "grey0": "#393e42",
                            "grey1": "#43484d",
                            "grey2": "#5e6977",
                            "grey3": "#86939e",
                            "grey4": "#bdc6cf",
                            "grey5": "#e1e8ee",
                            "greyOutline": "#bbb",
                            "platform": Object {
                              "android": Object {
                                "error": "#f44336",
                                "grey": "rgba(0, 0, 0, 0.54)",
                                "primary": "#2196f3",
                                "secondary": "#9C27B0",
                                "success": "#4caf50",
                                "warning": "#ffeb3b",
                              },
                              "ios": Object {
                                "error": "#ff3b30",
                                "grey": "#7d7d7d",
                                "primary": "#007aff",
                                "searchBg": "#dcdce1",
                                "secondary": "#5856d6",
                                "success": "#4cd964",
                                "warning": "#ffcc00",
                              },
                            },
                            "primary": "#2089dc",
                            "searchBg": "#303337",
                            "secondary": "#ca71eb",
                            "success": "#52c41a",
                            "warning": "#faad14",
                            "white": "#ffffff",
                          },
                        }
                      }
                      transition={true}
                    />
                    <View
                      accessibilityElementsHidden={false}
                      importantForAccessibility="yes"
                      pointerEvents="auto"
                      style={
                        Object {
                          "bottom": 0,
                          "left": 0,
                          "opacity": 1,
                          "position": "absolute",
                          "right": 0,
                          "top": 0,
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "alignItems": "center",
                            "backgroundColor": "transparent",
                            "borderColor": "white",
                            "borderRadius": 50,
                            "borderWidth": 2.5,
                            "flex": 1,
                            "height": null,
                            "justifyContent": "center",
                            "width": null,
                          }
                        }
                        testID="RNE__Image__placeholder"
                      />
                    </View>
                    <View
                      style={
                        Object {
                          "borderColor": "white",
                          "borderRadius": 50,
                          "borderWidth": 2.5,
                          "flex": 1,
                          "height": null,
                          "width": null,
                        }
                      }
                    />
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View
            style={
              Object {
                "width": "85%",
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#2A2E43",
                    "fontFamily": "Roboto-Regular",
                  },
                  Object {
                    "color": "rgb(28, 28, 30)",
                    "fontSize": 22.5,
                    "marginHorizontal": 60,
                    "marginTop": 60,
                  },
                ]
              }
            >
              Crew manager
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "#2A2E43",
                    "fontFamily": "Roboto-Regular",
                  },
                  Object {
                    "color": "rgb(28, 28, 30)",
                    "fontSize": 26.5,
                    "fontWeight": "bold",
                    "marginHorizontal": 60,
                    "marginTop": 2.5,
                  },
                ]
              }
            >
              Mr. Alexey Menshikov
            </Text>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "flex-start",
                  "marginHorizontal": 60,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2A2E43",
                      "fontFamily": "Roboto-Regular",
                    },
                    Object {
                      "color": "rgb(28, 28, 30)",
                      "fontSize": 26.5,
                      "fontWeight": "bold",
                      "marginTop": 2.5,
                    },
                  ]
                }
              >
                10:12
              </Text>
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2A2E43",
                      "fontFamily": "Roboto-Regular",
                    },
                    Object {
                      "color": "rgb(28, 28, 30)",
                    },
                  ]
                }
              >
                 (local time 24hr)
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "borderBottomColor": "#78849E",
              "borderBottomWidth": 0.3,
              "marginTop": 30,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              Object {
                "width": "50%",
              }
            }
          >
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
              testID="directTelephoneNumber-button"
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2A2E43",
                      "fontFamily": "Roboto-Regular",
                    },
                    Object {
                      "color": "rgb(28, 28, 30)",
                      "fontSize": 22.5,
                      "marginHorizontal": 60,
                      "marginTop": 60,
                    },
                  ]
                }
              >
                Direct phone numbers
              </Text>
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2A2E43",
                      "fontFamily": "Roboto-Regular",
                    },
                    Object {
                      "color": "rgb(28, 28, 30)",
                      "fontSize": 26.5,
                      "fontWeight": "bold",
                      "marginHorizontal": 60,
                      "marginTop": 2.5,
                      "textDecorationLine": "underline",
                    },
                  ]
                }
              >
                +35725882242
              </Text>
            </View>
          </View>
          <View
            style={
              Object {
                "width": "50%",
              }
            }
          >
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
              testID="aohTelephoneNumber-button"
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2A2E43",
                      "fontFamily": "Roboto-Regular",
                    },
                    Object {
                      "color": "rgb(28, 28, 30)",
                      "fontSize": 22.5,
                      "marginHorizontal": 60,
                      "marginTop": 60,
                    },
                  ]
                }
              >
                AOH phone numbers
              </Text>
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2A2E43",
                      "fontFamily": "Roboto-Regular",
                    },
                    Object {
                      "color": "rgb(28, 28, 30)",
                      "fontSize": 26.5,
                      "fontWeight": "bold",
                      "marginHorizontal": 60,
                      "marginTop": 2.5,
                      "textDecorationLine": "underline",
                    },
                  ]
                }
              >
                +35799378108
              </Text>
            </View>
          </View>
          <View
            style={
              Object {
                "borderBottomColor": "#78849E",
                "borderBottomWidth": 0.3,
                "marginTop": 60,
              }
            }
          />
        </View>
      </View>
      <View>
        <View>
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
            testID="email-button"
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#2A2E43",
                    "fontFamily": "Roboto-Regular",
                  },
                  Object {
                    "color": "rgb(28, 28, 30)",
                    "fontSize": 22.5,
                    "marginHorizontal": 60,
                    "marginTop": 60,
                  },
                ]
              }
            >
              Email
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "#2A2E43",
                    "fontFamily": "Roboto-Regular",
                  },
                  Object {
                    "color": "rgb(28, 28, 30)",
                    "fontSize": 26.5,
                    "fontWeight": "bold",
                    "marginHorizontal": 60,
                    "marginTop": 2.5,
                    "textDecorationLine": "underline",
                  },
                ]
              }
            >
              d9@marlow.com.cy
            </Text>
          </View>
        </View>
      </View>
      <View>
        <View>
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
            testID="skype-button"
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#2A2E43",
                    "fontFamily": "Roboto-Regular",
                  },
                  Object {
                    "color": "rgb(28, 28, 30)",
                    "fontSize": 22.5,
                    "marginHorizontal": 60,
                    "marginTop": 60,
                  },
                ]
              }
            >
              Skype
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "#2A2E43",
                    "fontFamily": "Roboto-Regular",
                  },
                  Object {
                    "color": "rgb(28, 28, 30)",
                    "fontSize": 26.5,
                    "fontWeight": "bold",
                    "marginHorizontal": 60,
                    "marginTop": 2.5,
                    "textDecorationLine": "underline",
                  },
                ]
              }
            >
              
            </Text>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "borderBottomColor": "#78849E",
              "borderBottomWidth": 0.3,
              "marginTop": 60,
            }
          }
        />
      </View>
      <View>
        <View>
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
            testID="website-button"
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#2A2E43",
                    "fontFamily": "Roboto-Regular",
                  },
                  Object {
                    "color": "rgb(28, 28, 30)",
                    "fontSize": 22.5,
                    "marginHorizontal": 60,
                    "marginTop": 60,
                  },
                ]
              }
            >
              Web
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "#2A2E43",
                    "fontFamily": "Roboto-Regular",
                  },
                  Object {
                    "color": "rgb(28, 28, 30)",
                    "fontSize": 26.5,
                    "fontWeight": "bold",
                    "marginHorizontal": 60,
                    "marginTop": 2.5,
                    "textDecorationLine": "underline",
                  },
                ]
              }
            >
              http://marlow-navigation.com
            </Text>
          </View>
        </View>
      </View>
      <View>
        <View>
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
            testID="address-button"
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#2A2E43",
                    "fontFamily": "Roboto-Regular",
                  },
                  Object {
                    "color": "rgb(28, 28, 30)",
                    "fontSize": 22.5,
                    "marginHorizontal": 60,
                    "marginTop": 60,
                  },
                ]
              }
            >
              Address
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "#2A2E43",
                    "fontFamily": "Roboto-Regular",
                  },
                  Object {
                    "color": "rgb(28, 28, 30)",
                    "fontSize": 26.5,
                    "fontWeight": "bold",
                    "marginHorizontal": 60,
                    "marginTop": 2.5,
                    "textDecorationLine": "underline",
                  },
                ]
              }
            >
              13 Alexandrias Street, 3013, Limassol
            </Text>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "marginBottom": "10%",
            }
          }
        />
      </View>
    </View>
  </RCTScrollView>
</View>
`;
